# Django_locker_system

./: .gitignore  Dockerfile  Makefile  deploy_dev.sh  docker-compose.yml  manage.py  pyproject.toml  readme.md
assets/: staticfiles.json
controlpanel/: urls.py  views.py
locker/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
payments/: payment_utils.py  urls.py  views.py
permissions/: permissions.py
storage_locker/: admin.py  apps.py  customer.py  lkr_detail_view.py  locker_utils.py  models.py  mqtt.py  response.py  serializers.py  urls.py  views.py
storage_locker/migrations/: 0001_initial.py  0002_bizlkr_updated_at.py  0003_remove_prebook_payment_boo_prebook_payment_status.py  0004_businessinfo_loc_id.py  0005_businessinfo_loc_name.py  0006_alter_employee_biz.py  0007_alter_securitypin_sec_pin_pin.py  0008_securitypin_attempt.py  0009_alter_securitypin_attempt.py  0010_alter_securitypin_attempt.py  0011_businessinfo_iot_client_id_iotrequest.py  0012_remarks_iotrequest_status_alter_iotrequest_iot_id.py  0013_iotrequest_remarks.py  0014_alter_iotrequest_remarks.py  0015_alter_businessinfo_iot_client_id.py  0016_alter_iotrequest_request_dt_and_more.py  0017_bizlkrtype_processing_fee.py  0018_bizlkrtype_max_24_hrs.py  0019_rename_customer_id_invoice_customer.py  0020_alter_invoice_duration.py  (+47 more)
templates/: Privacy_policy.html  Prohibited_privacy.html  Refund.html  Terms.html  bookingpage.html  index.html  style.css  style2.css  style3.css
users/: serializers.py  urls.py  utils.py  views.py
utils/: __init__.py  get_env_utils.py
